[gd_scene load_steps=20 format=3 uid="uid://8k5tmjirkwsj"]

[ext_resource type="Script" uid="uid://crcx6mavpcbas" path="res://scripts/main_menu.gd" id="1_06t4h"]
[ext_resource type="Texture2D" uid="uid://dyludn880arir" path="res://images/Grid.png" id="1_bqqt6"]
[ext_resource type="Texture2D" uid="uid://b8tt2gtpbpu03" path="res://images/soul.png" id="2_ekxnf"]
[ext_resource type="Texture2D" uid="uid://bpf0wbofr85sj" path="res://images/Cell.png" id="4_wu84c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_06t4h"]
size = Vector2(128, 324)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7vrkn"]
size = Vector2(139, 334)

[sub_resource type="CircleShape2D" id="CircleShape2D_fu7sn"]

[sub_resource type="Animation" id="Animation_8ln24"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_wu84c"]
resource_name = "move"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.6, 0.6), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ln24"]
_data = {
&"RESET": SubResource("Animation_8ln24"),
&"move": SubResource("Animation_wu84c")
}

[sub_resource type="Animation" id="Animation_06t4h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Transision:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Transision/Transision:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-679, -2747)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Shop:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Shop:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CharacterBody2D:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_glbon"]
resource_name = "change scene"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transision:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transision/Transision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8993718, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-679, -2747), Vector2(-679, -571)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharacterBody2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.9666667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"change_scene"
}]
}

[sub_resource type="Animation" id="Animation_jix8l"]
resource_name = "idle play"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.17075509, 1),
"update": 0,
"values": [Vector2(0.9, 0.9), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fu7sn"]
resource_name = "out play"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.16493855, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ekxnf"]
resource_name = "out shop"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shop:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.17677672, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shop:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_7vrkn"]
resource_name = "select play"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.17075509, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_l6cm7"]
resource_name = "select shop"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shop:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.15389307, 0.22531278),
"update": 0,
"values": [Vector2(0.019348834, 0.004907745), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shop:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_bqqt6"]
resource_name = "transision"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transision:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transision/Transision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8993718),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-679, -571), Vector2(-679, -2747)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fu7sn"]
_data = {
&"RESET": SubResource("Animation_06t4h"),
&"change scene": SubResource("Animation_glbon"),
&"idle play": SubResource("Animation_jix8l"),
&"out play": SubResource("Animation_fu7sn"),
&"out shop": SubResource("Animation_ekxnf"),
&"select play": SubResource("Animation_7vrkn"),
&"select shop": SubResource("Animation_l6cm7"),
&"transision": SubResource("Animation_bqqt6")
}

[node name="Main Menu" type="Node2D"]

[node name="Node2D" type="Node2D" parent="."]
visible = false
position = Vector2(361.00003, 48)

[node name="Label" type="Label" parent="Node2D"]
offset_left = -167.77783
offset_top = -239.99998
offset_right = 258.22217
offset_bottom = 37.000015
scale = Vector2(0.8672636, 0.8437685)
theme_override_font_sizes/font_size = 100
text = "GRID
       Dash"
metadata/_edit_use_anchors_ = true

[node name="Grid" type="Sprite2D" parent="Node2D"]
z_index = -3
position = Vector2(9, 274)
scale = Vector2(0.3083333, 0.31111115)
texture = ExtResource("1_bqqt6")

[node name="ColorRect" type="ColorRect" parent="Node2D/Grid"]
offset_left = -314.5946
offset_top = -308.5714
offset_right = 314.5946
offset_bottom = 311.78564
color = Color(1, 1, 1, 0.11764706)

[node name="Shop" type="Node2D" parent="."]
position = Vector2(812, 58)
scale = Vector2(1e-05, 1e-05)

[node name="Label" type="Label" parent="Shop"]
offset_left = -111.0
offset_top = -154.0
offset_right = 315.0
offset_bottom = 123.0
scale = Vector2(0.8672636, 0.8437685)
theme_override_font_sizes/font_size = 100
text = "SHOP"
metadata/_edit_use_anchors_ = true

[node name="Polygon2D" type="Polygon2D" parent="Shop"]
position = Vector2(13.901438, -15.000008)
scale = Vector2(1.4859157, 1.5)
polygon = PackedVector2Array(-51, 82, -78, 116, -51, 118, -56, 170, 39, 170, 43, 123, 64, 125, 48, 86)

[node name="Polygon2D2" type="Polygon2D" parent="Shop"]
position = Vector2(13.901438, -15.000008)
scale = Vector2(1.4859157, 1.5)
color = Color(1, 0.29411766, 0.29411766, 1)
polygon = PackedVector2Array(-49.12799, 86, -67.298584, 112.66667, -37.687195, 114.66667, -25.573486, 88)

[node name="Polygon2D3" type="Polygon2D" parent="Shop"]
position = Vector2(66.901436, -9)
scale = Vector2(1.4859157, 1.5)
color = Color(1, 0.29411766, 0.29411766, 1)
polygon = PackedVector2Array(-54.51184, 85.99999, -62.587646, 111.33333, -30.957336, 112.666664, -32.97632, 86.666664)

[node name="Polygon2D4" type="Polygon2D" parent="Shop"]
position = Vector2(124.90143, -7.0000076)
scale = Vector2(1.4859157, 1.5)
color = Color(1, 0.29411766, 0.29411766, 1)
polygon = PackedVector2Array(-57.203735, 86.666664, -62.587646, 111.33333, -24.227478, 113.333336, -34.99524, 88)

[node name="play" type="Button" parent="."]
offset_left = 267.0
offset_top = 469.0
offset_right = 476.0
offset_bottom = 614.0
theme_override_font_sizes/font_size = 70
text = "Play"

[node name="play" type="Area2D" parent="play"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="play/play"]
position = Vector2(101, -57)
shape = SubResource("RectangleShape2D_06t4h")

[node name="shop" type="Button" parent="."]
offset_left = 667.0
offset_top = 469.0
offset_right = 946.0
offset_bottom = 614.0
theme_override_font_sizes/font_size = 70
text = "Shop
"

[node name="shop" type="Area2D" parent="shop"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="shop/shop"]
position = Vector2(143.5, -48)
shape = SubResource("RectangleShape2D_7vrkn")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(371, 761)
script = ExtResource("1_06t4h")

[node name="Area2D" type="Area2D" parent="CharacterBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/Area2D"]
shape = SubResource("CircleShape2D_fu7sn")

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
position = Vector2(-3, -324)
zoom = Vector2(1.2, 1.2)
position_smoothing_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterBody2D"]
libraries = {
&"": SubResource("AnimationLibrary_8ln24")
}

[node name="characters" type="Node2D" parent="CharacterBody2D"]

[node name="default" type="ColorRect" parent="CharacterBody2D/characters"]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="Soul" type="Sprite2D" parent="CharacterBody2D/characters"]
visible = false
scale = Vector2(0.2266018, 0.2266018)
texture = ExtResource("2_ekxnf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fu7sn")
}
autoplay = "transision"

[node name="Transision" type="Node2D" parent="."]
z_index = 2

[node name="Transision" type="ColorRect" parent="Transision"]
offset_left = -679.0
offset_top = -2747.0
offset_right = 1377.0
offset_bottom = -506.0
color = Color(0.099985994, 0.099985994, 0.099985994, 1)

[node name="Grids" type="Node2D" parent="."]

[node name="grids" type="Node2D" parent="Grids"]

[node name="Cell" type="Sprite2D" parent="Grids/grids"]
z_index = -2
position = Vector2(371, 761.00006)
scale = Vector2(0.072916694, 0.07222216)
texture = ExtResource("4_wu84c")

[node name="Cell2" type="Sprite2D" parent="Grids/grids"]
z_index = -2
position = Vector2(591, 762)
scale = Vector2(0.072916694, 0.07222216)
texture = ExtResource("4_wu84c")

[node name="Cell3" type="Sprite2D" parent="Grids/grids"]
z_index = -2
position = Vector2(812.00006, 762.00006)
scale = Vector2(0.072916694, 0.07222216)
texture = ExtResource("4_wu84c")

[node name="grid2" type="Node2D" parent="Grids"]
position = Vector2(371, 762)
scale = Vector2(0.9, 0.9)

[node name="ColorRect" type="ColorRect" parent="Grids/grid2"]
offset_left = -38.888893
offset_top = -36.66667
offset_right = 528.8889
offset_bottom = 33.33339
color = Color(0, 0, 0, 0.18431373)
metadata/_edit_use_anchors_ = true

[node name="ColorRect2" type="ColorRect" parent="Grids/grid2"]
z_index = -1
offset_left = -38.888893
offset_top = -280.00006
offset_right = 37.777794
offset_bottom = -36.666626
color = Color(0, 0, 0, 0.18431373)
metadata/_edit_use_anchors_ = true

[node name="ColorRect3" type="ColorRect" parent="Grids/grid2"]
z_index = -1
offset_left = 452.22226
offset_top = -280.0
offset_right = 528.8889
offset_bottom = -37.77777
color = Color(0, 0, 0, 0.18431373)
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
offset_left = 76.0
offset_top = 812.0
offset_right = 124.0
offset_bottom = 887.0
text = "reset
data"

[node name="Button2" type="Button" parent="."]
offset_left = 138.0
offset_top = 814.0
offset_right = 200.0
offset_bottom = 889.0
text = "+30$"

[connection signal="area_entered" from="CharacterBody2D/Area2D" to="CharacterBody2D" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="CharacterBody2D/Area2D" to="CharacterBody2D" method="_on_area_2d_area_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="CharacterBody2D" method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="Button" to="CharacterBody2D" method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="CharacterBody2D" method="_on_button_2_pressed"]
